log/build_2024-07-09_17-06-08/stage_challenge/stderr.log
  File "/home/lucas/ros2_ws/install/stage_challenge/lib/python3.10/site-packages/stage_challenge/rrt2.py", line 74
    elif self.step == 2.0 and self.oz <= 0.92 and <= 4.5 and self.scan_data > 3.0:
                                                  ^^
SyntaxError: invalid syntax

